Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20625

MariaDB asserting when enabling wsrep_on

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.4.8
    • 10.4.13
    • Galera
    • None
    • Linux marcelo-altmann--standalone-1 4.20.13-1.el7.elrepo.x86_64 #1 SMP Wed Feb 27 10:02:05 EST 2019 x86_64 x86_64 x86_64 GNU/Linux

      CentOS Linux release 7.6.1810 (Core)

    Description

      MariaDB will assert if you try to access wsrep status after changing wsrep_on dynamically.

      How to repeat:

      1. start mariadb passing only the wsrep_provider

      mysqld --no-defaults --user=mysql --wsrep_provider=/usr/lib64/galera-4/libgalera_smm.so
      

      2. enable wsrep_on and query status variables:

      mysql -e "SET GLOBAL wsrep_on=ON; SHOW GLOBAL STATUS LIKE 'wsrep%';"
      

      Result:

       
      terminate called after throwing an instance of 'wsrep::runtime_error'
        what():  provider not loaded
      190918 18:57:34 [ERROR] mysqld got signal 6 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.
       
      Server version: 10.4.8-MariaDB
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=1
      max_threads=153
      thread_count=7
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 467735 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f94bc0009a8
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f9520c2fcf0 thread_stack 0x49000
      addr2line: 'mysqld': No such file
      mysqld(my_print_stacktrace+0x2e)[0x5589d30f683e]
      mysqld(handle_fatal_signal+0x30f)[0x5589d2b8ce0f]
      sigaction.c:0(__restore_rt)[0x7f9528a305d0]
      :0(__GI_raise)[0x7f9526d02207]
      :0(__GI_abort)[0x7f9526d038f8]
      /lib64/libstdc++.so.6(_ZN9__gnu_cxx27__verbose_terminate_handlerEv+0x165)[0x7f95273fb7d5]
      /lib64/libstdc++.so.6(+0x5e746)[0x7f95273f9746]
      /lib64/libstdc++.so.6(+0x5e773)[0x7f95273f9773]
      /lib64/libstdc++.so.6(+0x5e993)[0x7f95273f9993]
      addr2line: 'mysqld': No such file
      mysqld(_ZNK5wsrep12server_state8providerEv+0x47)[0x5589d2d160d7]
      mysqld(_ZNK5wsrep12server_state6statusEv+0x15)[0x5589d317d365]
      mysqld(_Z17wsrep_show_statusP3THDP17st_mysql_show_varPc+0x73)[0x5589d2afc233]
      mysqld(+0x7064ad)[0x5589d29ee4ad]
      mysqld(_Z11fill_statusP3THDP10TABLE_LISTP4Item+0x152)[0x5589d29f1c02]
      mysqld(_Z24get_schema_tables_resultP4JOIN23enum_schema_table_state+0x276)[0x5589d29f7f56]
      mysqld(_ZN4JOIN10exec_innerEv+0x8a5)[0x5589d29dc1d5]
      mysqld(_ZN4JOIN4execEv+0x33)[0x5589d29dc723]
      mysqld(_Z12mysql_selectP3THDP10TABLE_LISTjR4ListI4ItemEPS4_jP8st_orderS9_S7_S9_yP13select_resultP18st_select_lex_unitP13st_select_lex+0x186)[0x5589d29daa26]
      mysqld(_Z13handle_selectP3THDP3LEXP13select_resultm+0x1d7)[0x5589d29db597]
      mysqld(+0x58dd2a)[0x5589d2875d2a]
      mysqld(_Z21mysql_execute_commandP3THD+0x7b23)[0x5589d2985bd3]
      mysqld(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x24b)[0x5589d298751b]
      mysqld(+0x69fdc9)[0x5589d2987dc9]
      mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x2b69)[0x5589d298b2c9]
      mysqld(_Z10do_commandP3THD+0x11c)[0x5589d298baac]
      mysqld(_Z24do_handle_one_connectionP7CONNECT+0x1fa)[0x5589d2a6918a]
      mysqld(handle_one_connection+0x3d)[0x5589d2a6926d]
      pthread_create.c:0(start_thread)[0x7f9528a28dd5]
      /lib64/libc.so.6(clone+0x6d)[0x7f9526dc9ead]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f94bc00fd60): is an invalid pointer
      Connection ID (thread ID): 8
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on
       
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
       
      We think the query pointer is invalid, but we will try to print it anyway.
      Query: SHOW GLOBAL STATUS LIKE 'wsrep%'
       
      Writing a core file...
      Working directory at /var/lib/mysql
      Resource Limits:
      Limit                     Soft Limit           Hard Limit           Units
      Max cpu time              unlimited            unlimited            seconds
      Max file size             unlimited            unlimited            bytes
      Max data size             unlimited            unlimited            bytes
      Max stack size            8388608              unlimited            bytes
      Max core file size        0                    unlimited            bytes
      Max resident set          unlimited            unlimited            bytes
      Max processes             unlimited            unlimited            processes
      Max open files            1048576              1048576              files
      Max locked memory         65536                65536                bytes
      Max address space         unlimited            unlimited            bytes
      Max file locks            unlimited            unlimited            locks
      Max pending signals       1542427              1542427              signals
      Max msgqueue size         819200               819200               bytes
      Max nice priority         0                    0
      Max realtime priority     0                    0
      Max realtime timeout      unlimited            unlimited            us
      Core pattern: core
       
      Aborted
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            marcelo.altmann Marcelo Altmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d 5h
                2d 5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.