MDEV-20625 MariaDB asserting when enabling wsrep_on

Start up replication when wsrep_cluster_address is set and
global wsrep_on is changed from OFF to ON. Shut down replication
gracefully when wsrep_on is changed from ON to OFF.

This patch changes the behavior for global wsrep_on manipulation.
All other connections except the one which changes the value
are closed to protect cluster data integrity and changing the value
will have a side effect of changing the node status in the cluster.